[gd_scene load_steps=3 format=1]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/hud.fnt" type="BitmapFont" id=2]

[node name="HUD" type="CanvasLayer"]

process/pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="score" type="Label" parent="."]

rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 320.0
margin/top = 40.0
margin/right = 640.0
margin/bottom = 56.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="shield_bar" type="TextureProgress" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 40.0
margin/right = 342.0
margin/bottom = 80.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = null
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="shield_num" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 130.0
margin/top = 46.0
margin/right = 174.0
margin/bottom = 62.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.984375, 0.18457, 0.934387, 1 )
text = "100"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="message" type="Label" parent="."]

visibility/visible = false
visibility/opacity = 0.5
rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 400.0
margin/top = 400.0
margin/right = 760.0
margin/bottom = 480.0
custom_fonts/font = ExtResource( 2 )
text = "message"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="message_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="pause_popup" type="Panel" parent="."]

visibility/visible = false
visibility/opacity = 0.4
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="pause_msg" type="Label" parent="pause_popup"]

visibility/blend_mode = 1
anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 40.0
margin/right = 1440.0
margin/bottom = 638.0
custom_fonts/font = ExtResource( 2 )
text = "PAUSED"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="game_over_popup" type="Panel" parent="."]

visibility/visible = false
visibility/opacity = 0.4
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="game_over_msg" type="Label" parent="game_over_popup"]

visibility/blend_mode = 1
rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 360.0
margin/right = 480.0
margin/bottom = 400.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Game Over"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="restart" type="Button" parent="game_over_popup"]

visibility/blend_mode = 1
rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 560.0
margin/right = 480.0
margin/bottom = 582.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.03125, 1, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Restart"
flat = true

[connection signal="timeout" from="message_timer" to="." method="_on_message_timer_timeout"]

[connection signal="button_up" from="game_over_popup/restart" to="." method="_on_restart_button_up"]


